Раздел с машинами с адаптивом, но без функционала на js

--- a/index.html
+++ b/index.html
@@ -154,7 +154,303 @@
         </div>
       </div>
     </main>
-    
+    <section class="park">
+      <div class="park__body">
+        <div class="park__class">
+          <div class="container">
+            <div class="park__class__body">
+              <h2 class="park-title park__class-title">Выберите класс авто</h2>
+              <ul class="park__class__list">
+                <li class="park__class__item">
+                  <div class="park__class-img"><img src="img/class-budget.png" alt="Бюджетный класс"></div>
+                  <div class="park__class__item__content">
+                    <h3 class="park__class__item-title">Бюджетный</h3>
+                    <span class="park__class-price">1500 ₽</span>
+                    <span class="park__class-correction">от / сутки</span>
+                  </div>
+                </li>
+                <li class="park__class__item">
+                  <div class="park__class-img"><img src="img/class-comfort.png" alt="Комфорт класс"></div>
+                  <div class="park__class__item__content">
+                    <h3 class="park__class__item-title">Комфорт+</h3>
+                    <span class="park__class-price">1500 ₽</span>
+                    <span class="park__class-correction">от / сутки</span>
+                  </div>
+                </li>
+                <li class="park__class__item _active">
+                  <div class="park__class-img"><img src="img/class-crossover.png" alt="Кроссоверы"></div>
+                  <div class="park__class__item__content">
+                    <h3 class="park__class__item-title">Кроссоверы</h3>
+                    <span class="park__class-price">1500 ₽</span>
+                    <span class="park__class-correction">от / сутки</span>
+                  </div>
+                </li>
+                <li class="park__class__item">
+                  <div class="park__class-img"><img src="img/class-business.png" alt="Бизнес класс"></div>
+                  <div class="park__class__item__content">
+                    <h3 class="park__class__item-title">Бизнес</h3>
+                    <span class="park__class-price">1500 ₽</span>
+                    <span class="park__class-correction">от / сутки</span>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="park__car">
+          <div class="container">
+            <div class="park__car__body">
+              <h2 class="park-title park__car-title">Автомобили в классе</h2>
+              <ul class="park__car__list">
+                <li class="park__car-item">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-1.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Volkswagen Tiguan 2.0</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">АКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">15 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+                <li class="park__car-item">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-2.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Hyundai Genesis 70</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">АКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">4 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+                <li class="park__car-item _sale">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-3.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Kia Optima 1.6 МКПП</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">МКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">3 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+                <li class="park__car-item">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-4.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Nissan Murano</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">АКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">5 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+                <li class="park__car-item">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-5.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Skoda Octavia</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">АКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">4 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+                <li class="park__car-item">
+                  <div class="park__car__header">
+                    <div class="park__car__character park__car__people">
+                      <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
+                      <span class="park__car__character-text">5</span>
+                    </div>
+                    <div class="park__car__character park__car__bag">
+                      <div class="park__car__character-icon"><img src="img/car-bag.svg" alt="Кол-во мест для багажа"></div>
+                      <span class="park__car__character-text">3</span>
+                    </div>
+                    <span class="park__car-sale">Акция</span>
+                  </div>
+                  <div class="park__car-img"><img src="img/car-6.png" alt="Машина"></div>
+                  <div class="park__car__content">
+                    <span class="park__car-class">Кроссоверы</span>
+                    <h3 class="park__car-item-title">Hyundai Genesis 80</h3>
+                    <ul class="park__car__parameters">
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Двигатель</span>
+                        <span class="park__car__parameter-descr">1.6 Бензин</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Расход</span>
+                        <span class="park__car__parameter-descr">10л / 100км</span>
+                      </li>
+                      <li class="park__car__parameter">
+                        <span class="park__car__parameter-title">Трансмиссия</span>
+                        <span class="park__car__parameter-descr">МКПП</span>
+                      </li>
+                    </ul>
+                    <div class="park__car__footer">
+                      <div class="park__car__price">
+                        <span class="park__car__price-old">5 500 ₽</span>
+                        <span class="park__car__price-all">3 500 ₽</span>
+                        <div class="park__car__price-correction">от / сутки</div>
+                      </div>
+                      <button class="btn-outline park__car-btn">Подробнее</button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="park__car-more">
+                <a href="#" class="btn-outline btn-round park__car-more-link">Все автомобили</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Модальные окна -->
     <div class="modal modal-contacts" data-modal="contacts">
       <div class="modal__body">
