--- a/index.html
+++ b/index.html
@@ -443,14 +443,62 @@
                   </div>
                 </li>
               </ul>
-              <div class="park__car-more">
-                <a href="#" class="btn-outline btn-round park__car-more-link">Все автомобили</a>
+              <div class="park-more">
+                <a href="#" class="btn-outline btn-round park-more-link">Все автомобили</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <section class="rental">
+      <div class="container">
+        <div class="rental__body">
+          <div class="rental__content">
+            <h2 class="rental-title">Прокат авто в Севастополе</h2>
+            <p class="rental-text">Компания «На Прокат» предоставляет всем жителям полуострова и гостям Крыма услуги недорогого автопроката. У нас можно взять машину в аренду на сутки, неделю или несколько месяцев. Не отказывайте себе в свободе передвижения: арендуйте современные исправные авто на время отпуска, командировки, или пока ваш автомобиль находится в ремонте. К вашим услугам – большой автопарк новых автомобилей, более чем адекватные цены и отличный качественный сервис. <br> <br> Если во время отдыха хотите сэкономить на такси и при этом осмотреть самые красивые места полуострова, вам не обойтись без услуг нашей компании. Чтобы заказать аренду авто, выберите машину на сайте и забронируйте на нужную дату. Сделать это можно по телефону или онлайн.</p>
+          </div>
+          <ul class="rental__services">
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-money.svg" alt="Деньги"></div>
+              <span class="rental__services-text">Минимальный залог</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-document.svg" alt="Документы"></div>
+              <span class="rental__services-text">Быстрое оформление по паспорту и правам</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-repair.svg" alt="Техподдержка"></div>
+              <span class="rental__services-text">Техподдержка 24/7</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-withdrawal.svg" alt="Залог"></div>
+              <span class="rental__services-text">Возврат залога по карте до 30 суток</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-car.svg" alt="Автомобиль"></div>
+              <span class="rental__services-text">Новые автомобили</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-arrow.svg" alt="Пробег"></div>
+              <span class="rental__services-text">Неограниченный пробег</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-location.svg" alt="Локация"></div>
+              <span class="rental__services-text">Доставка автомобиля в любой город</span>
+            </li>
+            <li class="rental__service">
+              <div class="rental__service-icon"><img src="img/rental-plane.svg" alt="Аэропорт"></div>
+              <span class="rental__services-text">Наличие автомобилей в аэропорту</span>
+            </li>
+          </ul>
+          <div class="rental-more">
+            <a href="#" class="btn-outline btn-round rental-more-link">Условия</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Модальные окна -->
     <div class="modal modal-contacts" data-modal="contacts">
       <div class="modal__body">
