--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <title>Document</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/ico">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Swiper -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
   <div class="wrapper">
-    <header class="header">
+    <header class="header" style="display: none;">
       <div class="container">
         <div class="header__body">
           <div class="info">
@@ -99,7 +103,7 @@
         </div>
       </div>
     </header>
-    <main class="main">
+    <main class="main" style="display: none;">
       <div class="container">
         <div class="main__body">
           <div class="main__content">
@@ -154,7 +158,7 @@
         </div>
       </div>
     </main>
-    <section class="park">
+    <section class="park" style="display: none;">
       <div class="park__body">
         <div class="park__class">
           <div class="container">
@@ -451,11 +455,11 @@
         </div>
       </div>
     </section>
-    <section class="rental">
+    <section class="rental" style="display: none;">
       <div class="container">
         <div class="rental__body">
           <div class="rental__content">
-            <h2 class="rental-title">Прокат авто в Севастополе</h2>
+            <h2 class="title rental-title">Прокат авто в Севастополе</h2>
             <p class="rental-text">Компания «На Прокат» предоставляет всем жителям полуострова и гостям Крыма услуги недорогого автопроката. У нас можно взять машину в аренду на сутки, неделю или несколько месяцев. Не отказывайте себе в свободе передвижения: арендуйте современные исправные авто на время отпуска, командировки, или пока ваш автомобиль находится в ремонте. К вашим услугам – большой автопарк новых автомобилей, более чем адекватные цены и отличный качественный сервис. <br> <br> Если во время отдыха хотите сэкономить на такси и при этом осмотреть самые красивые места полуострова, вам не обойтись без услуг нашей компании. Чтобы заказать аренду авто, выберите машину на сайте и забронируйте на нужную дату. Сделать это можно по телефону или онлайн.</p>
           </div>
           <ul class="rental__services">
@@ -494,6 +498,163 @@
           </ul>
           <div class="rental-more">
             <a href="#" class="btn-outline btn-round rental-more-link">Условия</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <div class="reviews__body">
+          <h2 class="title reviews-title">Отзывы</h2>
+          <div class="reviews__slider">
+            <div class="swiper-container reviews__slider-content">
+              <ul class="swiper-wrapper reviews__list">
+                <li class="swiper-slide reviews__item">
+                  <div class="reviews__header">
+                    <div class="reviews__user">
+                      <div class="reviews__user-icon"><img src="img/reviews-user.svg" alt="Клиент"></div>
+                      <div class="reviews__user-name">Евгений</div>
+                    </div>
+                    <div class="reviews__estim">
+                      <ul class="reviews__estim__stars">
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                      </ul>
+                      <div class="reviews__estim-text">3.5</div>
+                    </div>
+                  </div>
+                  <div class="reviews__content">
+                    <p class="reviews-text">Живу в Севастополе, машины нет. По выходным арендую здесь машину, чтобы свозить семью к морю. Цены нормальные, машины всегда чистые и на ходу (брал разные Фольксваген Поло, 2 раза Киа Рио). Отличная команда, всегда идут навстречу. Спасибо за скидку!</p>
+                    <span class="reviews-date">02 декабря 2019 г.</span>
+                  </div>
+                </li>
+                <li class="swiper-slide reviews__item">
+                  <div class="reviews__header">
+                    <div class="reviews__user">
+                      <div class="reviews__user-icon"><img src="img/reviews-user.svg" alt="Клиент"></div>
+                      <div class="reviews__user-name">Евгений</div>
+                    </div>
+                    <div class="reviews__estim">
+                      <ul class="reviews__estim__stars">
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                      </ul>
+                      <div class="reviews__estim-text">3.5</div>
+                    </div>
+                  </div>
+                  <div class="reviews__content">
+                    <p class="reviews-text">Живу в Севастополе, машины нет. По выходным арендую здесь машину, чтобы свозить семью к морю. Цены нормальные, машины всегда чистые и на ходу (брал разные Фольксваген Поло, 2 раза Киа Рио). Отличная команда, всегда идут навстречу. Спасибо за скидку!</p>
+                    <span class="reviews-date">02 декабря 2019 г.</span>
+                  </div>
+                </li>
+                <li class="swiper-slide reviews__item">
+                  <div class="reviews__header">
+                    <div class="reviews__user">
+                      <div class="reviews__user-icon"><img src="img/reviews-user.svg" alt="Клиент"></div>
+                      <div class="reviews__user-name">Евгений</div>
+                    </div>
+                    <div class="reviews__estim">
+                      <ul class="reviews__estim__stars">
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#EFAB45"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                        <li class="reviews__estim-star">
+                          <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 0L9.97724 4.08591L15 4.96601L11.5017 8.37073L12.128 13L7.5 11.0188L2.8584 13L3.49811 8.37073L0 4.96601L5.0226 4.08591L7.5 0Z" fill="#DADDDF"/>
+                          </svg>
+                        </li>
+                      </ul>
+                      <div class="reviews__estim-text">3.5</div>
+                    </div>
+                  </div>
+                  <div class="reviews__content">
+                    <p class="reviews-text">Живу в Севастополе, машины нет. По выходным арендую здесь машину, чтобы свозить семью к морю. Цены нормальные, машины всегда чистые и на ходу (брал разные Фольксваген Поло, 2 раза Киа Рио). Отличная команда, всегда идут навстречу. Спасибо за скидку!</p>
+                    <span class="reviews-date">02 декабря 2019 г.</span>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="reviews__arrows">
+              <button class="reviews__arrows-left">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19 12H5" stroke="#2C3B45" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M12 5L5 12L12 19" stroke="#2C3B45" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button>
+              <button class="reviews__arrows-right">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5 12H19" stroke="#2C3B45" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M12 5L19 12L12 19" stroke="#2C3B45" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </button>
+            </div>
+            <div class="reviews__pagination"></div>
+          </div>
+          <div class="reviews-btn-more">
+            <a href="#" class="btn-outline btn-round reviews-btn-more-link">Оставить отзыв</a>
           </div>
         </div>
       </div>
