--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="header" style="display: none;">
+    <header class="header">
       <div class="container">
         <div class="header__body">
           <div class="info">
@@ -103,7 +103,7 @@
         </div>
       </div>
     </header>
-    <main class="main" style="display: none;">
+    <main class="main">
       <div class="container">
         <div class="main__body">
           <div class="main__content">
@@ -158,7 +158,7 @@
         </div>
       </div>
     </main>
-    <section class="park" style="display: none;">
+    <section class="park">
       <div class="park__body">
         <div class="park__class">
           <div class="container">
@@ -455,7 +455,7 @@
         </div>
       </div>
     </section>
-    <section class="rental" style="display: none;">
+    <section class="rental">
       <div class="container">
         <div class="rental__body">
           <div class="rental__content">
