Сделал страницу контактов с адаптивом

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <li><a href="#">Автопарк</a></li>
                     <li><a href="#">Цены</a></li>
                     <li><a href="#">Условия</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                   </ul>
                   <div class="nav-menu__footer">
                     <div class="info__items">
