--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="nav__logo__text">
                   <span class="nav__logo-title">Гранд Авто</span>
-                  <div class="nav__logo-label">Аренда авто в Севастополе</div>
+                  <div class="nav__logo-label">Аренд авто в Севастополе</div>
                 </div>
               </a>
               <div class="nav-menu">
