Сделал страницу автомобиля

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
         <div class="reviews__body">
           <h2 class="title reviews-title">Отзывы</h2>
           <div class="reviews__slider">
-            <div class="swiper swiper-container reviews__slider-content">
+            <div class="swiper-container reviews__slider-content">
               <ul class="swiper-wrapper reviews__list">
                 <li class="swiper-slide reviews__item">
                   <div class="reviews__header">
